# snaplet-sqlite-simple

./: .gitignore  .travis.yml  LICENSE  README.md  snaplet-sqlite-simple.cabal  stack.yaml
example/: example.cabal
example/snaplets/heist/templates/: base.tpl  index.tpl
example/src/: Application.hs  Db.hs  Model.hs  Site.hs  Util.hs
example/static/: screen.css
resources/db/: devel.cfg
src/Snap/Snaplet/: SqliteSimple.hs
src/Snap/Snaplet/Auth/Backends/: SqliteSimple.hs
test/: App.hs  SafeCWD.hs  TestSuite.hs  Tests.hs  snaplet-test.cabal
test/src/: App.hs  TestSuite.hs  Tests.hs
