Name:                example
Version:             0.1
Synopsis:            Project to demonstrate the use of snaplet-sqlite-simple
License:             AllRightsReserved
Author:              Janne Hellsten
Maintainer:          Janne Hellsten <jjhellst@gmail.com>
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable example
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base,
    bytestring,
    heist,
    lens,
    mtl,
    snap,
    snap-core,
    snap-server,
    snap-loader-static,
    snaplet-sqlite-simple,
    sqlite-simple,
    text,
    time,
    either,
    errors

  if flag(development)
    build-depends:
      snap-loader-dynamic
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind
