Name:                example
Version:             0.1
Synopsis:            Project to demonstrate the use of snaplet-sqlite-simple
License:             AllRightsReserved
Author:              Janne Hellsten
Maintainer:          Janne Hellsten <jjhellst@gmail.com>
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable example
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                  >= 4      && < 5,
    bytestring            >= 0.9.1  && < 0.11,
    snap                  >= 1.0,
    snap-core             >= 1.0,
    snap-server           >= 1.0,
    snap-loader-static    >= 1.0,
    snaplet-sqlite-simple >= 1.0,
    sqlite-simple         >= 0.1    && < 1.0,
    heist                 >= 1.0,
    map-syntax            >= 0.2.0.1,
    lens                  >= 4.0    && < 5,
    mtl                   >= 2      && < 3,
    template-haskell      >= 2.10.0.0,
    text                  >= 1.2,
    time                  >= 1.5,
    either                >= 4.4.1.1,
    errors                >= 2.1.2

  if flag(development)
    build-depends:
      snap-loader-dynamic >= 0.9 && < 0.11
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind
