name:           snaplet-test
version:        0.0.1
build-type:     Simple
cabal-version:  >= 1.8

Executable snaplet-test
  hs-source-dirs:  src
  main-is:         TestSuite.hs

  build-depends:
    HUnit                      >= 1.2      && < 2,
    MonadCatchIO-transformers  >= 0.2      && < 0.4,
    base                       >= 4        && < 5,
    bytestring                 >= 0.9      && < 0.11,
    clientsession,
    configurator               >= 0.1      && < 0.3,
    containers                 >= 0.3,
    directory                  >= 1.0      && < 1.3,
    errors                     >= 1.3.1    && < 1.4,
    lens                       >= 3.7.0.1  && < 3.8,
    mtl                        >= 2,
    snap-core,
    snap-server,
    snap,
    snaplet-sqlite-simple,
    sqlite-simple,
    stm                        >= 2.4,
    test-framework             >= 0.6      && < 0.9,
    test-framework-hunit       >= 0.2.7    && < 0.4,
    text                       >= 0.11     && < 0.12,
    time                       >= 1.1,
    transformers               >= 0.2,
    template-haskell

  extensions:
    BangPatterns,
    CPP,
    DeriveDataTypeable,
    ExistentialQuantification,
    FlexibleContexts,
    FlexibleInstances,
    GeneralizedNewtypeDeriving,
    MultiParamTypeClasses,
    NoMonomorphismRestriction,
    OverloadedStrings,
    PackageImports,
    Rank2Types,
    ScopedTypeVariables,
    TemplateHaskell,
    TypeFamilies,
    TypeOperators,
    TypeSynonymInstances

  ghc-options: -O2 -Wall -fhpc -fwarn-tabs -funbox-strict-fields -threaded
               -fno-warn-unused-do-bind
